Reorganization of the entire project into more coherent packages & add https system & add cuckoo filter for IsUnique()
